tdf#135427 Make pstoedit delegate letter placement to us

As pstoedit documents itself, its wmf/emf driver uses a very approximate
interletter spacing, making the text look really awful. But it provides a
-nfw option that delegates the letter placement to the emf reader, and we
happen to be doing a proper job, thus getting a proper vectorized output.

This is not a concern on Windows (and the option is ignored there). The
option is available since version 3.40 (~2005). So we can just always pass
it on.

Change-Id: I8ffd3fbf046b5a80e8011651eeaf060a8f5107e2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100035
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>
(cherry picked from commit c39b27a4d0dfc3b75d8486c0d7592c5209fb6b14)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100053
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>